# ai-learning

./: .gitignore  AGENTS.md  README.vi.md  docker-compose.yml
docs/: ws3_WBS.md  (+2 more)
src/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
src/api/app/: main.py
src/api/app/api/: deps.py
src/api/app/api/routes/: appointments.py  catalog.py  sessions.py
src/api/app/core/: config.py  hf_model_cache.py  medassist_session_state.py  session_language.py  session_store.py
src/api/app/core/enumerations/: knowledge_enum.py  languages_enum.py
src/api/app/core/utilities/: safe_dict.py
src/api/app/db/: __init__.py  connection.py  health.py  kb_sqlite_migrations.py  orm.py
src/api/app/entities/: __init__.py  appointment.py  chat_session.py  department.py  disease_department_mapping.py  doctor.py  doctor_working_hour.py  knowledge_chunk.py  knowledge_document.py  medical_examination_schedule.py  patient.py  rag_query_log.py  user_account.py
src/api/app/models/: __init__.py
src/api/app/models/appointment/: __init__.py  appointment_create_request.py  appointment_public.py
src/api/app/models/audio/: __init__.py  tts_request.py
src/api/app/models/auth/: __init__.py  login_request.py  token_response.py
src/api/app/models/chat/: __init__.py  chat_request.py  message.py  role.py
src/api/dummy/: __init__.py  schema.sql  seed.py
src/api/dummy/chroma_store/: chroma.sqlite3
src/api/tests/: test_db_availability.py  test_orm_metadata.py  test_pipeline_language.py  test_triage_booking.py
(+238 files in other folders)
