[project]
name = "medassist-api"
version = "0.1.0"
description = "MedAssist FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.54.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "cachetools>=5.5.0",
    "bcrypt>=4.0.0",
    "langdetect>=1.0.9",
    "PyJWT>=2.8.0",
    "tzdata>=2024.1",
    "huggingface_hub>=0.25.0",
    "transformers>=5.5.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "accelerate>=0.33.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "imageio-ffmpeg>=0.4.0",
    "edge-tts>=6.1.0",
    "chromadb>=0.5.0",
    "SQLAlchemy>=2.0.0",
    "tiktoken>=0.7.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
]

[tool.vercel]
entrypoint = "app.main:app"
